parser/LIAParser.cpp

// Generated from LIA.g4 by ANTLR 4.13.1


#include "LIAListener.h"

#include "LIAParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct LIAParserStaticData final {
  LIAParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LIAParserStaticData(const LIAParserStaticData&) = delete;
  LIAParserStaticData(LIAParserStaticData&&) = delete;
  LIAParserStaticData& operator=(const LIAParserStaticData&) = delete;
  LIAParserStaticData& operator=(LIAParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag liaParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
LIAParserStaticData *liaParserStaticData = nullptr;

void liaParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (liaParserStaticData != nullptr) {
    return;
  }
#else
  assert(liaParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<LIAParserStaticData>(
    std::vector<std::string>{
      "start", "term", "term2", "formula", "formula2", "relop", "boolop", 
      "termop"
    },
    std::vector<std::string>{
      "", "", "", "", "'('", "')'", "'+'", "'-'", "'*'", "'>'", "'<'", "'='", 
      "'||'", "'&&'", "':'", "'!'"
    },
    std::vector<std::string>{
      "", "QUANT", "VARIABLE", "INT", "LPAREN", "RPAREN", "PLUS", "MINUS", 
      "MULT", "GT", "LT", "EQ", "OR", "AND", "COLON", "NOT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  liaParserStaticData = staticData.release();
}

}

LIAParser::LIAParser(TokenStream *input) : LIAParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

LIAParser::LIAParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  LIAParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *liaParserStaticData->atn, liaParserStaticData->decisionToDFA, liaParserStaticData->sharedContextCache, options);
}

LIAParser::~LIAParser() {
  delete _interpreter;
}

const atn::ATN& LIAParser::getATN() const {
  return *liaParserStaticData->atn;
}

std::string LIAParser::getGrammarFileName() const {
  return "LIA.g4";
}

const std::vector<std::string>& LIAParser::getRuleNames() const {
  return liaParserStaticData->ruleNames;
}

const dfa::Vocabulary& LIAParser::getVocabulary() const {
  return liaParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LIAParser::getSerializedATN() const {
  return liaParserStaticData->serializedATN;
}


//----------------- StartContext ------------------------------------------------------------------

LIAParser::StartContext::StartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LIAParser::FormulaContext* LIAParser::StartContext::formula() {
  return getRuleContext<LIAParser::FormulaContext>(0);
}

tree::TerminalNode* LIAParser::StartContext::EOF() {
  return getToken(LIAParser::EOF, 0);
}


size_t LIAParser::StartContext::getRuleIndex() const {
  return LIAParser::RuleStart;
}

void LIAParser::StartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStart(this);
}

void LIAParser::StartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStart(this);
}

LIAParser::StartContext* LIAParser::start() {
  StartContext *_localctx = _tracker.createInstance<StartContext>(_ctx, getState());
  enterRule(_localctx, 0, LIAParser::RuleStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(16);
    formula();
    setState(17);
    match(LIAParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TermContext ------------------------------------------------------------------

LIAParser::TermContext::TermContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LIAParser::TermContext::getRuleIndex() const {
  return LIAParser::RuleTerm;
}

void LIAParser::TermContext::copyFrom(TermContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- TermTmpContext ------------------------------------------------------------------

LIAParser::Term2Context* LIAParser::TermTmpContext::term2() {
  return getRuleContext<LIAParser::Term2Context>(0);
}

LIAParser::TermTmpContext::TermTmpContext(TermContext *ctx) { copyFrom(ctx); }

void LIAParser::TermTmpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTermTmp(this);
}
void LIAParser::TermTmpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTermTmp(this);
}
//----------------- TermOperationContext ------------------------------------------------------------------

std::vector<LIAParser::TermContext *> LIAParser::TermOperationContext::term() {
  return getRuleContexts<LIAParser::TermContext>();
}

LIAParser::TermContext* LIAParser::TermOperationContext::term(size_t i) {
  return getRuleContext<LIAParser::TermContext>(i);
}

LIAParser::TermopContext* LIAParser::TermOperationContext::termop() {
  return getRuleContext<LIAParser::TermopContext>(0);
}

LIAParser::TermOperationContext::TermOperationContext(TermContext *ctx) { copyFrom(ctx); }

void LIAParser::TermOperationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTermOperation(this);
}
void LIAParser::TermOperationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTermOperation(this);
}

LIAParser::TermContext* LIAParser::term() {
   return term(0);
}

LIAParser::TermContext* LIAParser::term(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  LIAParser::TermContext *_localctx = _tracker.createInstance<TermContext>(_ctx, parentState);
  LIAParser::TermContext *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 2;
  enterRecursionRule(_localctx, 2, LIAParser::RuleTerm, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    _localctx = _tracker.createInstance<TermTmpContext>(_localctx);
    _ctx = _localctx;
    previousContext = _localctx;

    setState(20);
    term2(0);
    _ctx->stop = _input->LT(-1);
    setState(28);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<TermOperationContext>(_tracker.createInstance<TermContext>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleTerm);
        setState(22);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(23);
        termop();
        setState(24);
        term(3); 
      }
      setState(30);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Term2Context ------------------------------------------------------------------

LIAParser::Term2Context::Term2Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LIAParser::Term2Context::getRuleIndex() const {
  return LIAParser::RuleTerm2;
}

void LIAParser::Term2Context::copyFrom(Term2Context *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- MultByConst0Context ------------------------------------------------------------------

tree::TerminalNode* LIAParser::MultByConst0Context::INT() {
  return getToken(LIAParser::INT, 0);
}

tree::TerminalNode* LIAParser::MultByConst0Context::MULT() {
  return getToken(LIAParser::MULT, 0);
}

LIAParser::Term2Context* LIAParser::MultByConst0Context::term2() {
  return getRuleContext<LIAParser::Term2Context>(0);
}

LIAParser::MultByConst0Context::MultByConst0Context(Term2Context *ctx) { copyFrom(ctx); }

void LIAParser::MultByConst0Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMultByConst0(this);
}
void LIAParser::MultByConst0Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMultByConst0(this);
}
//----------------- SignedTermContext ------------------------------------------------------------------

LIAParser::TermopContext* LIAParser::SignedTermContext::termop() {
  return getRuleContext<LIAParser::TermopContext>(0);
}

LIAParser::Term2Context* LIAParser::SignedTermContext::term2() {
  return getRuleContext<LIAParser::Term2Context>(0);
}

LIAParser::SignedTermContext::SignedTermContext(Term2Context *ctx) { copyFrom(ctx); }

void LIAParser::SignedTermContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSignedTerm(this);
}
void LIAParser::SignedTermContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSignedTerm(this);
}
//----------------- MultByConst1Context ------------------------------------------------------------------

LIAParser::Term2Context* LIAParser::MultByConst1Context::term2() {
  return getRuleContext<LIAParser::Term2Context>(0);
}

tree::TerminalNode* LIAParser::MultByConst1Context::MULT() {
  return getToken(LIAParser::MULT, 0);
}

tree::TerminalNode* LIAParser::MultByConst1Context::INT() {
  return getToken(LIAParser::INT, 0);
}

LIAParser::MultByConst1Context::MultByConst1Context(Term2Context *ctx) { copyFrom(ctx); }

void LIAParser::MultByConst1Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMultByConst1(this);
}
void LIAParser::MultByConst1Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMultByConst1(this);
}
//----------------- VarContext ------------------------------------------------------------------

tree::TerminalNode* LIAParser::VarContext::VARIABLE() {
  return getToken(LIAParser::VARIABLE, 0);
}

LIAParser::VarContext::VarContext(Term2Context *ctx) { copyFrom(ctx); }

void LIAParser::VarContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVar(this);
}
void LIAParser::VarContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVar(this);
}
//----------------- ConstContext ------------------------------------------------------------------

tree::TerminalNode* LIAParser::ConstContext::INT() {
  return getToken(LIAParser::INT, 0);
}

LIAParser::ConstContext::ConstContext(Term2Context *ctx) { copyFrom(ctx); }

void LIAParser::ConstContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConst(this);
}
void LIAParser::ConstContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConst(this);
}
//----------------- Paren1Context ------------------------------------------------------------------

tree::TerminalNode* LIAParser::Paren1Context::LPAREN() {
  return getToken(LIAParser::LPAREN, 0);
}

LIAParser::TermContext* LIAParser::Paren1Context::term() {
  return getRuleContext<LIAParser::TermContext>(0);
}

tree::TerminalNode* LIAParser::Paren1Context::RPAREN() {
  return getToken(LIAParser::RPAREN, 0);
}

LIAParser::Paren1Context::Paren1Context(Term2Context *ctx) { copyFrom(ctx); }

void LIAParser::Paren1Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParen1(this);
}
void LIAParser::Paren1Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParen1(this);
}

LIAParser::Term2Context* LIAParser::term2() {
   return term2(0);
}

LIAParser::Term2Context* LIAParser::term2(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  LIAParser::Term2Context *_localctx = _tracker.createInstance<Term2Context>(_ctx, parentState);
  LIAParser::Term2Context *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 4;
  enterRecursionRule(_localctx, 4, LIAParser::RuleTerm2, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(44);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<MultByConst0Context>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(32);
      match(LIAParser::INT);
      setState(33);
      match(LIAParser::MULT);
      setState(34);
      term2(5);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<SignedTermContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(35);
      termop();
      setState(36);
      term2(4);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<Paren1Context>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(38);
      match(LIAParser::LPAREN);
      setState(39);
      term(0);
      setState(40);
      match(LIAParser::RPAREN);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<VarContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(42);
      match(LIAParser::VARIABLE);
      break;
    }

    case 5: {
      _localctx = _tracker.createInstance<ConstContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(43);
      match(LIAParser::INT);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(51);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<MultByConst1Context>(_tracker.createInstance<Term2Context>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleTerm2);
        setState(46);

        if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
        setState(47);
        match(LIAParser::MULT);
        setState(48);
        match(LIAParser::INT); 
      }
      setState(53);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- FormulaContext ------------------------------------------------------------------

LIAParser::FormulaContext::FormulaContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LIAParser::FormulaContext::getRuleIndex() const {
  return LIAParser::RuleFormula;
}

void LIAParser::FormulaContext::copyFrom(FormulaContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FormulaTmpContext ------------------------------------------------------------------

LIAParser::Formula2Context* LIAParser::FormulaTmpContext::formula2() {
  return getRuleContext<LIAParser::Formula2Context>(0);
}

LIAParser::FormulaTmpContext::FormulaTmpContext(FormulaContext *ctx) { copyFrom(ctx); }

void LIAParser::FormulaTmpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFormulaTmp(this);
}
void LIAParser::FormulaTmpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFormulaTmp(this);
}
//----------------- Paren2Context ------------------------------------------------------------------

tree::TerminalNode* LIAParser::Paren2Context::LPAREN() {
  return getToken(LIAParser::LPAREN, 0);
}

LIAParser::FormulaContext* LIAParser::Paren2Context::formula() {
  return getRuleContext<LIAParser::FormulaContext>(0);
}

tree::TerminalNode* LIAParser::Paren2Context::RPAREN() {
  return getToken(LIAParser::RPAREN, 0);
}

LIAParser::Paren2Context::Paren2Context(FormulaContext *ctx) { copyFrom(ctx); }

void LIAParser::Paren2Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParen2(this);
}
void LIAParser::Paren2Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParen2(this);
}
//----------------- ComplementContext ------------------------------------------------------------------

tree::TerminalNode* LIAParser::ComplementContext::NOT() {
  return getToken(LIAParser::NOT, 0);
}

LIAParser::FormulaContext* LIAParser::ComplementContext::formula() {
  return getRuleContext<LIAParser::FormulaContext>(0);
}

LIAParser::ComplementContext::ComplementContext(FormulaContext *ctx) { copyFrom(ctx); }

void LIAParser::ComplementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComplement(this);
}
void LIAParser::ComplementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComplement(this);
}
//----------------- QuantContext ------------------------------------------------------------------

tree::TerminalNode* LIAParser::QuantContext::QUANT() {
  return getToken(LIAParser::QUANT, 0);
}

tree::TerminalNode* LIAParser::QuantContext::VARIABLE() {
  return getToken(LIAParser::VARIABLE, 0);
}

tree::TerminalNode* LIAParser::QuantContext::COLON() {
  return getToken(LIAParser::COLON, 0);
}

LIAParser::FormulaContext* LIAParser::QuantContext::formula() {
  return getRuleContext<LIAParser::FormulaContext>(0);
}

LIAParser::QuantContext::QuantContext(FormulaContext *ctx) { copyFrom(ctx); }

void LIAParser::QuantContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuant(this);
}
void LIAParser::QuantContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuant(this);
}
LIAParser::FormulaContext* LIAParser::formula() {
  FormulaContext *_localctx = _tracker.createInstance<FormulaContext>(_ctx, getState());
  enterRule(_localctx, 6, LIAParser::RuleFormula);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(65);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<LIAParser::QuantContext>(_localctx);
      enterOuterAlt(_localctx, 1);
      setState(54);
      match(LIAParser::QUANT);
      setState(55);
      match(LIAParser::VARIABLE);
      setState(56);
      match(LIAParser::COLON);
      setState(57);
      formula();
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<LIAParser::ComplementContext>(_localctx);
      enterOuterAlt(_localctx, 2);
      setState(58);
      match(LIAParser::NOT);
      setState(59);
      formula();
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<LIAParser::Paren2Context>(_localctx);
      enterOuterAlt(_localctx, 3);
      setState(60);
      match(LIAParser::LPAREN);
      setState(61);
      formula();
      setState(62);
      match(LIAParser::RPAREN);
      break;
    }

    case 4: {
      _localctx = _tracker.createInstance<LIAParser::FormulaTmpContext>(_localctx);
      enterOuterAlt(_localctx, 4);
      setState(64);
      formula2(0);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Formula2Context ------------------------------------------------------------------

LIAParser::Formula2Context::Formula2Context(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t LIAParser::Formula2Context::getRuleIndex() const {
  return LIAParser::RuleFormula2;
}

void LIAParser::Formula2Context::copyFrom(Formula2Context *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FormulaOperationContext ------------------------------------------------------------------

std::vector<LIAParser::Formula2Context *> LIAParser::FormulaOperationContext::formula2() {
  return getRuleContexts<LIAParser::Formula2Context>();
}

LIAParser::Formula2Context* LIAParser::FormulaOperationContext::formula2(size_t i) {
  return getRuleContext<LIAParser::Formula2Context>(i);
}

LIAParser::BoolopContext* LIAParser::FormulaOperationContext::boolop() {
  return getRuleContext<LIAParser::BoolopContext>(0);
}

LIAParser::FormulaOperationContext::FormulaOperationContext(Formula2Context *ctx) { copyFrom(ctx); }

void LIAParser::FormulaOperationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFormulaOperation(this);
}
void LIAParser::FormulaOperationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFormulaOperation(this);
}
//----------------- TermRelationContext ------------------------------------------------------------------

std::vector<LIAParser::TermContext *> LIAParser::TermRelationContext::term() {
  return getRuleContexts<LIAParser::TermContext>();
}

LIAParser::TermContext* LIAParser::TermRelationContext::term(size_t i) {
  return getRuleContext<LIAParser::TermContext>(i);
}

LIAParser::RelopContext* LIAParser::TermRelationContext::relop() {
  return getRuleContext<LIAParser::RelopContext>(0);
}

LIAParser::TermRelationContext::TermRelationContext(Formula2Context *ctx) { copyFrom(ctx); }

void LIAParser::TermRelationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTermRelation(this);
}
void LIAParser::TermRelationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTermRelation(this);
}
//----------------- Paren3Context ------------------------------------------------------------------

tree::TerminalNode* LIAParser::Paren3Context::LPAREN() {
  return getToken(LIAParser::LPAREN, 0);
}

LIAParser::Formula2Context* LIAParser::Paren3Context::formula2() {
  return getRuleContext<LIAParser::Formula2Context>(0);
}

tree::TerminalNode* LIAParser::Paren3Context::RPAREN() {
  return getToken(LIAParser::RPAREN, 0);
}

LIAParser::Paren3Context::Paren3Context(Formula2Context *ctx) { copyFrom(ctx); }

void LIAParser::Paren3Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParen3(this);
}
void LIAParser::Paren3Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParen3(this);
}
//----------------- Complement2Context ------------------------------------------------------------------

tree::TerminalNode* LIAParser::Complement2Context::NOT() {
  return getToken(LIAParser::NOT, 0);
}

LIAParser::Formula2Context* LIAParser::Complement2Context::formula2() {
  return getRuleContext<LIAParser::Formula2Context>(0);
}

LIAParser::Complement2Context::Complement2Context(Formula2Context *ctx) { copyFrom(ctx); }

void LIAParser::Complement2Context::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComplement2(this);
}
void LIAParser::Complement2Context::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LIAListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComplement2(this);
}

LIAParser::Formula2Context* LIAParser::formula2() {
   return formula2(0);
}

LIAParser::Formula2Context* LIAParser::formula2(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  LIAParser::Formula2Context *_localctx = _tracker.createInstance<Formula2Context>(_ctx, parentState);
  LIAParser::Formula2Context *previousContext = _localctx;
  (void)previousContext; // Silence compiler, in case the context is not used by generated code.
  size_t startState = 8;
  enterRecursionRule(_localctx, 8, LIAParser::RuleFormula2, precedence);

    

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(78);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      _localctx = _tracker.createInstance<TermRelationContext>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;

      setState(68);
      term(0);
      setState(69);
      relop();
      setState(70);
      term(0);
      break;
    }

    case 2: {
      _localctx = _tracker.createInstance<Paren3Context>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(72);
      match(LIAParser::LPAREN);
      setState(73);
      formula2(0);
      setState(74);
      match(LIAParser::RPAREN);
      break;
    }

    case 3: {
      _localctx = _tracker.createInstance<Complement2Context>(_localctx);
      _ctx = _localctx;
      previousContext = _localctx;
      setState(76);
      match(LIAParser::NOT);
      setState(77);
      formula2(1);
      break;
    }

    default:
      break;
    }
    _ctx->stop = _input->LT(-1);
    setState(86);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        auto newContext = _tracker.createInstance<FormulaOperationContext>(_tracker.createInstance<Formula2Context>(parentContext, parentState));
        _localctx = newContext;
        pushNewRecursionContext(newContext, startState, RuleFormula2);
        setState(80);

        if (!(precpred(_ctx, 2))) throw FailedPredicateException(this, "precpred(_ctx, 2)");
        setState(81);
        boolop();
        setState(82);
        formula2(3); 
      }
      setState(88);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- RelopContext ------------------------------------------------------------------
